# tap-powerbi

./: .env.example  .gitignore  CLAUDE.md  README.md  meltano.yml  pyproject.toml
.github/workflows/: run-zizmor.yml  test.yml
tap_powerbi/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tests/: test_core.py  test_proxy_auth.py
