[build-system]
requires = [
    "hatchling>=1.29.0,<2",
    "hatch-vcs>=0.5",
]
build-backend = "hatchling.build"

[project]
name = "tap-powerbi"
dynamic = ["version"]
description = "Singer tap for PowerBI, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Abhishek Gupta", email = "agupta@meltano.com" }]
keywords = [
    "ELT",
    "PowerBI",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
dependencies = [
    "singer-sdk[faker]~=0.54.1",
    "requests~=2.34.0",
    "typing-extensions>=4.5.0; python_version < '3.13'",
]

[project.optional-dependencies]
s3 = [
    "s3fs>=2026.1.0",
]

[project.scripts]
# CLI declaration
tap-powerbi = 'tap_powerbi.tap:TapPowerBI.cli'

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = [
    "pytest>=9",
    "pytest-github-actions-annotate-failures>=0.4",
    "requests-mock>=1.12.1",
    "singer-sdk[testing]",
]
typing = [
    "mypy>=1.19.1",
    "ty>=0.0.18",
]

[tool.hatch.version]
fallback-version = "0.1.0.dev0"
source = "vcs"

[tool.mypy]
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# requests-mock ships no py.typed marker / stubs; ignore the missing import.
module = ["requests_mock.*"]
ignore_missing_imports = true

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[tool.pytest]
addopts = [
    "-ra",
]
filterwarnings = [
    "error",
    "once:No records were available to test:UserWarning",
    "once:Fields in transformed catalog but not in records:UserWarning",
    # Python 3.10 EOL nudge from the SDK — informational; not a failure.
    "ignore::singer_sdk.helpers._compat.SingerSDKPythonEOLWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
required-version = ">=0.15"

[tool.ruff.lint]
future-annotations = true
ignore = [
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",  # assert is used by pytest
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# This configuration can be used to customize tox environments
[tool.tox]
requires = [
    "tox>=4.43",
    "tox-uv",
]
env_list = [
    "typing",
    { product = [
        { prefix = "3.", start = 10 },
    ] },
]

[tool.tox.env_run_base]
description = "run tests on Python {env_name}"
runner = "uv-venv-lock-runner"
pass_env = [
    "CI",
    "GITHUB_*",
    "TAP_POWERBI_*",
]
dependency_groups = [ "test" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.typing]
description = "type checks"
dependency_groups = [ "test", "typing" ]
commands = [
    [ "mypy", { replace = "posargs", default = [ "tap_powerbi", "tests" ], extend = true } ],
    [ "ty", "check", { replace = "posargs", default = [ "tap_powerbi", "tests" ], extend = true } ],
]
